# AdePT

base/inc/CopCore/include/CopCore/: VariableSizeObj.h
base/inc/CopCore/include/CopCore/ranluxpp/: mulmod.h
examples/Example13/: CMakeLists.txt  electrons.cpp  electrons.cu  example13-cu.cpp  example13-cu.h  example13.cpp  example13.cu  example13.cuh  example13.dp.cpp  example13.h  gammas.cpp  gammas.cu
magneticfield/inc/: fieldPropagatorConstBz.h
